--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "phaser": "^3.24.1"
+    "johnny-five": "^2.0.0",
+    "phaser": "^3.24.1",
+    "ws": "^7.3.1"
   }
 }
